# flarb

./: .env.example  .gitignore  Cargo.toml  README.md  firewall_access.json
.cargo/: config.toml
jupiter-swap-api/: README.md  logic.txt
jupiter-swap-api/scripts/: monitor.sh
pools/: README.md
src/: arbitrage.rs  config.rs  data.rs  decoder.rs  fetch_address.rs  graph.rs  lib.rs  macros.rs  main.rs  math.rs  mempool.rs  optimazer.rs  params.rs  predict.rs  quote.rs  router.rs  shred.rs
src/websocket/: mod.rs  ws_data.rs  ws_meteora.rs  ws_orca.rs  ws_parser.rs  ws_raydium.rs
